digital-ocean/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  rules:
  - host: 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-server
            port:
              number: 80

      - path: /test
        pathType: Prefix
        backend:
          service:
            name: test-server
            port:
              number: 80

      - path: /fast(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: fastapi
            port:
              number: 80
